# moat

./: .dockerignore  .gitignore  .licenserc.yaml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  index.yaml  justfile  rustfmt.nightly.toml  semantic.yaml
.cargo/: config.toml
.github/workflow/: ci.yaml
.github/workflows/: helm-chart-release.yaml  license_check.yaml
etc/grafana/dashboards/: moat.json
etc/grafana/provisioning/dashboards/: default.yaml
etc/grafana/provisioning/datasources/: default.yml
etc/helm/charts/moat/: Chart.yaml  values.yaml
etc/helm/charts/moat/templates/: NOTES.txt  _helpers.tpl  agent-deployment.yaml  agent-service-headless.yaml  cache-service-headless.yaml  cache-statefulset.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
etc/helm/charts/moat/templates/tests/: test-connection.yaml
etc/loki/: loki.yaml
etc/otel/: config.yaml
etc/prometheus/: prometheus.yaml
examples/: Cargo.toml  opendal.rs
moat/: Cargo.toml
moat-proto/: Cargo.toml  build.rs
moat-proto/src/: lib.rs
moat/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  metrics.rs  runtime.rs
moat/src/api/: client.rs  mod.rs  service.rs
moat/src/aws/: mod.rs  resigner.rs  s3.rs
moat/src/meta/: hash.rs  manager.rs  mod.rs  model.rs
moat/src/server/: filler.rs  mod.rs  proxy.rs
moat/src/telemetry/: logging.rs  meter.rs  mod.rs
moaterm/: Cargo.toml  LICENSE  README.md
moaterm/src/: app.rs  main.rs  op.rs  ui.rs
moaterm/src/peer/: mod.rs  selector.rs  table.rs  ui.rs
proto/: moat.proto
xtask/: Cargo.toml
xtask/src/: dev.rs  main.rs
