[workspace]
resolver = "3"
members = [
  # examples
  "examples",
  # components
  "moat",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
repository = "https://github.com/mrcroxx/moat"
homepage = "https://github.com/mrcroxx/moat"
keywords = ["cache", "hybrid"]
authors = ["MrCroxx <mrcroxx.cs@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.87"

[workspace.dependencies]
# Moat components

# Other dependencies
async-trait = "0.1"
chrono = "0.4"
clap = "4"
hex = "0.4"
hmac = "0.12"
pingora = "0.5"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"
serde = "1"
tokio = "1"
thiserror = "2"
futures = "0.3"
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"
tokio-retry = "0.3"
poem = "3"
poem-openapi = "5"
