# Copyright 2025 Moat Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = ["examples", "moat"]

[workspace.package]
version = "0.0.0"
edition = "2024"
repository = "https://github.com/mrcroxx/moat"
homepage = "https://github.com/mrcroxx/moat"
keywords = ["cache", "hybrid"]
authors = ["MrCroxx <mrcroxx.cs@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.87"

[workspace.dependencies]
# Moat components

# Other dependencies
async-trait = "0.1"
chrono = "0.4"
clap = "4"
colored = "3"
foyer = "0.17"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
humantime = "2"
itertools = "0.14"
pingora = "0.5"
poem = "3"
poem-openapi = "5"
prost = "0.13"
rand = "0.9"
reqwest = "0.12"
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = "1"
tokio-retry = "0.3"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
twox-hash = "2"
url = "2.0"
