# Copyright 2025 Moat Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = ["examples", "moat", "xtask"]

[workspace.package]
version = "0.0.0"
edition = "2024"
repository = "https://github.com/mrcroxx/moat"
homepage = "https://github.com/mrcroxx/moat"
keywords = ["cache", "hybrid"]
authors = ["MrCroxx <mrcroxx.cs@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1"
# Moat components

# Other dependencies
async-trait = "0.1"
bytes = "1"
bytesize = "2"
chrono = "0.4"
clap = { version = "4", features = ["env"] }
colored = "3"
foyer = "0.19.1"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1"
humantime = "2"
itertools = "0.14"
libc = "0.2"
mixtrics = "0.2"
opendal = "0.54"
opentelemetry = "0.30"
opentelemetry-appender-tracing = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = "0.30"
pingora = "0.6"
poem = "3"
poem-openapi = "5"
rand = "0.9"
reqwest = "0.12"
scopeguard = "1.2"
serde = "1"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = "1"
tokio-retry = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
twox-hash = "2"
url = "2"
