[package]
name = "examples"
description = "examples for moat - moat for your object storage"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
opendal = { version = "0.53", features = ["services-s3"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[example]]
name = "opendal"
path = "opendal.rs"
