[package]
name = "examples"
description = "examples for moat - moat for your object storage"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
opendal = { version = "0.53", features = ["services-s3"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
url = { workspace = true, features = ["serde"] }

[[example]]
name = "opendal"
path = "opendal.rs"
