[package]
name = "moat-proto"
description = "protos for moat - moat for your object storage"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
