[package]
name = "moat"
description = "moat for your object storage"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }
hex = { workspace = true }
hmac = { workspace = true }
pingora = { workspace = true, features = ["proxy", "openssl"] }
poem = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
url = { workspace = true }
